# profileai

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
src/: README.md  app.py  requirements.txt
src/agent/: ProFileAi.py
src/tools/: pubs_rag.py  pushover.py
tools/: pushover.py  tools_combo.py
utils/: parse_publications.py
